commit 2  de nasser

--- a/profiles.html
+++ b/profiles.html
@@ -164,7 +164,7 @@
             <div class="footer-social">
                 <h3>Suivez-nous</h3>
                 <div class="social-icons">
-                    <a href="#"><img src="assets/image.png" alt="Instagram"></a>
+                    <a href="#"><img src="assets/image1.png" alt="Instagram"></a>
                     <a href="#"><img src="assets/facebook img 2.webp" alt="Facebook"></a>
                 </div>
             </div>
