--- a/savoir.html
+++ b/savoir.html
@@ -18,7 +18,7 @@
         <ul>
           <li><a href="accueil.html">Accueil</a></li>
           <li><a href="profiles.html">Tous les profils</a></li>
-          <li><a href="formules.html">Formules</a></li>
+          <li><a href="formule.html">Formules</a></li>
           <li><a href="qui.html">Qui sommes-nous ?</a></li>
           <li><a href="actu.html">Actu</a></li>
           <li><a href="contact.html">Contact</a></li>
@@ -88,7 +88,7 @@
         <div class="footer-links">
           <div class="links-col">
             <a href="profils.html">Profils</a>
-            <a href="formules.html">Formules</a>
+            <a href="formule.html">Formules</a>
             <a href="qui.html">Qui sommes nous ?</a>
             <a href="actu.html">Actu</a>
             <a href="contact.html">Contact</a>
