--- a/qui.html
+++ b/qui.html
@@ -20,7 +20,7 @@
       <nav class="milieu">
         <a href="index.html">Accueil</a>
         <a href="profiles.html">Tous les Profiles</a>
-        <a href="formules.html">Formules</a>
+        <a href="formule.html">Formules</a>
         <a href="qui.html" class="active">Qui-sommes-nous ?</a>
         <a href="actu.html">Actu</a>
         <a href="contact.html">Contact</a>
@@ -98,7 +98,7 @@
       <div class="footer-links">
         <div class="links-col">
           <a href="profils.html">Profils</a>
-          <a href="formules.html">Formules</a>
+          <a href="formule.html">Formules</a>
           <a href="qui.html">Qui sommes-nous ?</a>
           <a href="actu.html">Actu</a>
           <a href="contact.html">Contact</a>
