--- a/seconnecter.html
+++ b/seconnecter.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Petinder- Se connecter</title>
-  <link rel="stylesheet" href="seconecter.css">
+  <link rel="stylesheet" href="seconnecter.css">
 </head>
 <body>
 
@@ -110,7 +110,7 @@
         <div class="links-col">
           <a href="profils.html">Profils</a>
           <a href="formule.html">Formules</a>
-          <a href="quisommesnous.html">Qui sommes-nous ?</a>
+          <a href="qui.html">Qui sommes-nous ?</a>
           <a href="actualites.html">Actu</a>
           <a href="contact.html">Contact</a>
         </div>
