--- a/qui.html
+++ b/qui.html
@@ -28,7 +28,7 @@
 
       <!-- Bouton connexion -->
       <div class="droite">
-        <a href="seconnecter.html" class="btn1">Se connecter</a>
+        <a href="seconecter.html" class="btn1">Se connecter</a>
       </div>
     </div>
   </header>
