--- a/seconecter.html
+++ b/seconecter.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Petinder- Se connecter</title>
-  <link rel="stylesheet" href="seconnecter.css">
+  <link rel="stylesheet" href="seconecter.css">
 </head>
 <body>
 
@@ -37,7 +37,7 @@
 
         <div class="droite">
             
-            <a href="seconnecter.html" class="btn1">Se connecter</a>
+            <a href="seconecter.html" class="btn1">Se connecter</a>
 
             
         </div>
