--- a/savoir.html
+++ b/savoir.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <div class="connexion">
-        <a href="seconnecter.html" class="btn-connexion">Se connecter</a>
+        <a href="seconecter.html" class="btn-connexion">Se connecter</a>
       </div>
     </div>
   </header>
