--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
         <div class="droite">
             
-            <a href="seconnecter.html" class="btn1">Se connecter</a>
+            <a href="seconecter.html" class="btn1">Se connecter</a>
 
             
         </div>
