--- a/creercompte.html
+++ b/creercompte.html
@@ -36,7 +36,7 @@
 
         <div class="droite">
             
-            <a href="seconnecter.html" class="btn1">Se connecter</a>
+            <a href="seconecter.html" class="btn1">Se connecter</a>
 
             
         </div>
